err/finnsyll.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FinnSyll-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/Morfessor-2.0.3.egg-info'...
Listing './lib/python3.5/site-packages/finnsyll'...
Listing './lib/python3.5/site-packages/finnsyll/data'...
Compiling './lib/python3.5/site-packages/finnsyll/v01.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v01.py", line 233
    print syllabify(arg) + '\n'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v02.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v02.py", line 263
    print syllabify(arg) + '\n'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v03.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v03.py", line 255
    print syllabify(arg) + '\n'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v04.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v04.py", line 298
    print syllabify(arg) + '\n'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v06.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v06.py", line 528
    print ' ~ '.join([s for s, r in syllabifications])
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v07.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v07.py", line 385
    print ' ~ '.join([s for s, r in syllabifications])
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v08.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v08.py", line 447
    print ' ~ '.join([s for s, r in syllabifications])
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v1.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v1.py", line 233
    print syllabify(arg) + '\n'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v10.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v10.py", line 452
    print [i for i in syllabify('avautuu')]                    # 1
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v11.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v11.py", line 519
    print [i for i in syllabify('purouoma')]
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v12.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v12.py", line 427
    print syll, rules
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/finnsyll/v2.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v2.py", line 263
    print syllabify(arg) + '\n'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v3.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v3.py", line 255
    print syllabify(arg) + '\n'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v4.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v4.py", line 298
    print syllabify(arg) + '\n'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v6.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v6.py", line 528
    print ' ~ '.join([s for s, r in syllabifications])
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v7.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v7.py", line 385
    print ' ~ '.join([s for s, r in syllabifications])
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finnsyll/v8.py'...
***   File "./lib/python3.5/site-packages/finnsyll/v8.py", line 447
    print ' ~ '.join([s for s, r in syllabifications])
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/morfessor'...
Listing './lib/python3.5/site-packages/morfessor/test'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
